# conv_trust

./: .gitignore  CONTRUST_README.md  DATASET_README.md  README.md  USAGE_GUIDE.md  advanced_analysis.py  advanced_bert_models.py  analyze_data.py  contrust_data_processor.py  contrust_model.py  dataset_description.py  debug_train.py  evaluation_framework.py  final_analysis.py  fix_models.py  print_unique_models.py  pyproject.toml  requirements.txt  requirements_ml.txt  run_complete_pipeline.py  simple_contrust_test.py  test_contrust.py  train_contrust.py  train_trust_models.py  trust_inference.py  upload_to_dataverse.py  upload_with_client.py
analysis_results/: README.md  metrics_summary.txt
contrust_results/: contrust_processor.pkl  dataset_stats.json  model_architecture.txt
contrust_results/tokenizer/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
data/: LICENSE  README.md  dataset_info.json
data/conversations/: conv_4261.json  conv_4262.json  conv_4263.json  conv_4264.json  conv_4265.json
data/metadata/: conv_4261.json  conv_4262.json  conv_4263.json  conv_4264.json  conv_4265.json
final_analysis_results/: stats_summary.txt  table_5_model_trust_levels.csv  table_6_qualitative_examples.txt
pipeline_results/evaluation/: ensemble_predictions.csv  evaluation_report.txt  lstm_deep_predictions.csv  model_comparison.csv  random_forest_feature_importance.csv  random_forest_traditional_predictions.csv  svm_traditional_predictions.csv  xgboost_traditional_predictions.csv
pipeline_results/trained_models/: random_forest_model.pkl  (+3 more)
