[project]
name = "conv-trust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.1.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.1.0",
    "seaborn>=0.11.0",
    "sentence-transformers>=2.2.0",
    "statsmodels>=0.14.4",
    "textblob>=0.17.0",
    "textstat>=0.7.0",
    "torch>=1.9.0",
    "tqdm>=4.64.0",
    "transformers>=4.20.0",
    "xgboost>=1.6.0",
]
